--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix **/*.{js,jsx,ts,tsx}"
+
   },
   "dependencies": {
     "next": "12.0.8",
@@ -19,6 +20,8 @@
     "@types/styled-components": "^5.1.20",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.5.4"
   }
 }
