--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.0.9",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.20",
